--- a/notenest/src/main/resources/application.properties
+++ b/notenest/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=notenest
 spring.data.mongodb.uri=mongodb+srv://hritikraj723:zj6604SZRMhVfjY2@cluster0.5a5fbvv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-spring.data.mongodb.database=journaldb
+spring.data.mongodb.database=Note_nest
 spring.data.mongodb.auto-index-creation=true
